Fix grid gap

--- a/app/HomeClient.module.scss
+++ b/app/HomeClient.module.scss
@@ -7,7 +7,6 @@
 
   .squareBox {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    gap: 0.5px;
   }
 }
